--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ packages =
 include_package_data = True
 
 [options.package_data]
-* = *.pyi
+* = *.pyi, py.typed
 
 [mypy]
 plugins = numpy.typing.mypy_plugin
